// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sales floor workflow tests renders the screen with additional items warning label 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#5a9ae0",
          "borderRadius": 2,
          "borderWidth": 1,
          "flexDirection": "column",
          "height": 30,
          "justifyContent": "center",
          "marginTop": 8,
          "width": "100%",
        }
      }
    >
      <Text>
        [missing "en.PICKING.REMOVE_PERISHABLE" translation]
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "space-between",
          "margin": 10,
        }
      }
    >
      <Text>
        [missing "en.PICKING.REMOVE_PERISHABLE_NEW_EXPIRY" translation]
      </Text>
      <Memo(Pressable)
        onPress={[Function]}
        style={
          {
            "borderBottomWidth": 1,
            "marginTop": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 18,
            }
          }
        >
          16/02/2021
        </Text>
      </Memo(Pressable)>
      <View
        style={
          {
            "flexDirection": "row",
            "marginTop": 30,
            "width": "100%",
          }
        }
      >
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "flex": 1,
              "margin": 5,
            }
          }
          title="[missing "en.GENERICS.CANCEL" translation]"
          titleColor="#0071e9"
          titleFontSize={16}
          titleFontWeight="normal"
          type={2}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "flex": 1,
              "margin": 5,
            }
          }
          title="[missing "en.GENERICS.CONTINUE" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </View>
  </CustomModalComponent>
  <PickPalletInfoCard
    canDelete={false}
    dispatch={[MockFunction]}
    inProgress={false}
    isSelected={false}
    onPress={[Function]}
    palletId="43"
    palletLocation="ABAR1-2"
    pickListItems={[]}
    pickStatus="ready to work"
    showCheckbox={false}
  />
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "padding": 5,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 13,
        }
      }
    >
      [missing "en.PICKING.UPDATE_REMAINING_QTY" translation]
    </Text>
  </View>
  <FlatList
    data={
      [
        {
          "assignedAssociate": "",
          "category": 3,
          "createTs": "2022-04-03T12:55:31.9633333Z",
          "createdBy": "Guude",
          "id": 0,
          "itemDesc": "generic description",
          "itemNbr": 1,
          "moveToFront": false,
          "newQuantityLeft": 0,
          "palletId": "43",
          "palletLocationId": 4,
          "palletLocationName": "ABAR1-2",
          "quickPick": false,
          "salesFloorLocationId": 5,
          "salesFloorLocationName": "ABAR1-3",
          "status": "ready to work",
          "upcNbr": "1234567890123",
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "padding": 10,
      }
    }
  >
    <mockConstructor
      color="#0071e9"
      name="info"
      size={30}
    />
    <Text
      style={
        {
          "fontSize": 13,
        }
      }
    >
      [missing "en.PICKING.ADDITIONAL_ITEMS" translation]
    </Text>
  </View>
  <View
    style={
      {
        "borderTopColor": "#bdbdbd",
        "borderTopWidth": 2,
        "flexDirection": "row",
        "marginTop": "auto",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        {
          "flex": 1,
          "margin": 5,
        }
      }
      testID="continue"
      title="[missing "en.GENERICS.CONTINUE" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</RCTSafeAreaView>
`;

exports[`Sales floor workflow tests renders the screen with one item on pallet 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#5a9ae0",
          "borderRadius": 2,
          "borderWidth": 1,
          "flexDirection": "column",
          "height": 30,
          "justifyContent": "center",
          "marginTop": 8,
          "width": "100%",
        }
      }
    >
      <Text>
        [missing "en.PICKING.REMOVE_PERISHABLE" translation]
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "space-between",
          "margin": 10,
        }
      }
    >
      <Text>
        [missing "en.PICKING.REMOVE_PERISHABLE_NEW_EXPIRY" translation]
      </Text>
      <Memo(Pressable)
        onPress={[Function]}
        style={
          {
            "borderBottomWidth": 1,
            "marginTop": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 18,
            }
          }
        >
          16/02/2021
        </Text>
      </Memo(Pressable)>
      <View
        style={
          {
            "flexDirection": "row",
            "marginTop": 30,
            "width": "100%",
          }
        }
      >
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "flex": 1,
              "margin": 5,
            }
          }
          title="[missing "en.GENERICS.CANCEL" translation]"
          titleColor="#0071e9"
          titleFontSize={16}
          titleFontWeight="normal"
          type={2}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "flex": 1,
              "margin": 5,
            }
          }
          title="[missing "en.GENERICS.CONTINUE" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </View>
  </CustomModalComponent>
  <PickPalletInfoCard
    canDelete={false}
    dispatch={[MockFunction]}
    inProgress={false}
    isSelected={false}
    onPress={[Function]}
    palletId="43"
    palletLocation="ABAR1-2"
    pickListItems={[]}
    pickStatus="ready to work"
    showCheckbox={false}
  />
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "padding": 5,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 13,
        }
      }
    >
      [missing "en.PICKING.UPDATE_REMAINING_QTY" translation]
    </Text>
  </View>
  <FlatList
    data={
      [
        {
          "assignedAssociate": "",
          "category": 3,
          "createTs": "2022-04-03T12:55:31.9633333Z",
          "createdBy": "Guude",
          "id": 0,
          "itemDesc": "generic description",
          "itemNbr": 1,
          "moveToFront": false,
          "palletId": "43",
          "palletLocationId": 4,
          "palletLocationName": "ABAR1-2",
          "quickPick": false,
          "salesFloorLocationId": 5,
          "salesFloorLocationName": "ABAR1-3",
          "status": "ready to work",
          "upcNbr": "1234567890123",
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
  <View
    style={
      {
        "borderTopColor": "#bdbdbd",
        "borderTopWidth": 2,
        "flexDirection": "row",
        "marginTop": "auto",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={true}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        {
          "flex": 1,
          "margin": 5,
        }
      }
      testID="continue"
      title="[missing "en.GENERICS.CONTINUE" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</RCTSafeAreaView>
`;

exports[`Sales floor workflow tests renders the screen with several items on the pallet 1`] = `
<ActivityIndicator
  animating={true}
  color="#0071e9"
  hidesWhenStopped={true}
  size="large"
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;

exports[`Sales floor workflow tests shows the activity indicator when waiting for pallet config api 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#5a9ae0",
          "borderRadius": 2,
          "borderWidth": 1,
          "flexDirection": "column",
          "height": 30,
          "justifyContent": "center",
          "marginTop": 8,
          "width": "100%",
        }
      }
    >
      <Text>
        [missing "en.PICKING.REMOVE_PERISHABLE" translation]
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "space-between",
          "margin": 10,
        }
      }
    >
      <Text>
        [missing "en.PICKING.REMOVE_PERISHABLE_NEW_EXPIRY" translation]
      </Text>
      <Memo(Pressable)
        onPress={[Function]}
        style={
          {
            "borderBottomWidth": 1,
            "marginTop": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 18,
            }
          }
        >
          16/02/2021
        </Text>
      </Memo(Pressable)>
      <View
        style={
          {
            "flexDirection": "row",
            "marginTop": 30,
            "width": "100%",
          }
        }
      >
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "flex": 1,
              "margin": 5,
            }
          }
          title="[missing "en.GENERICS.CANCEL" translation]"
          titleColor="#0071e9"
          titleFontSize={16}
          titleFontWeight="normal"
          type={2}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "flex": 1,
              "margin": 5,
            }
          }
          title="[missing "en.GENERICS.CONTINUE" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </View>
  </CustomModalComponent>
  <PickPalletInfoCard
    canDelete={false}
    dispatch={[MockFunction]}
    inProgress={false}
    isSelected={false}
    onPress={[Function]}
    palletId="43"
    palletLocation="ABAR1-2"
    pickListItems={[]}
    pickStatus="ready to work"
    showCheckbox={false}
  />
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "padding": 5,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 13,
        }
      }
    >
      [missing "en.PICKING.UPDATE_REMAINING_QTY" translation]
    </Text>
  </View>
  <FlatList
    data={
      [
        {
          "assignedAssociate": "",
          "category": 3,
          "createTs": "2022-04-03T12:55:31.9633333Z",
          "createdBy": "Guude",
          "id": 0,
          "itemDesc": "generic description",
          "itemNbr": 1,
          "moveToFront": false,
          "palletId": "43",
          "palletLocationId": 4,
          "palletLocationName": "ABAR1-2",
          "quickPick": false,
          "salesFloorLocationId": 5,
          "salesFloorLocationName": "ABAR1-3",
          "status": "ready to work",
          "upcNbr": "1234567890123",
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
  <View
    style={
      {
        "borderTopColor": "#bdbdbd",
        "borderTopWidth": 2,
        "flexDirection": "row",
        "marginTop": "auto",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={true}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        {
          "flex": 1,
          "margin": 5,
        }
      }
      testID="continue"
      title="[missing "en.GENERICS.CONTINUE" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</RCTSafeAreaView>
`;

exports[`Sales floor workflow tests shows the activity indicator when waiting for pallet details 1`] = `
<ActivityIndicator
  animating={true}
  color="#0071e9"
  hidesWhenStopped={true}
  size="large"
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;

exports[`Sales floor workflow tests shows the expiration date modal 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={true}
    modalType="Form"
    onClose={[Function]}
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#5a9ae0",
          "borderRadius": 2,
          "borderWidth": 1,
          "flexDirection": "column",
          "height": 30,
          "justifyContent": "center",
          "marginTop": 8,
          "width": "100%",
        }
      }
    >
      <Text>
        [missing "en.PICKING.REMOVE_PERISHABLE" translation]
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "space-between",
          "margin": 10,
        }
      }
    >
      <Text>
        [missing "en.PICKING.REMOVE_PERISHABLE_NEW_EXPIRY" translation]
      </Text>
      <Memo(Pressable)
        onPress={[Function]}
        style={
          {
            "borderBottomWidth": 1,
            "marginTop": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 18,
            }
          }
        >
          16/02/2021
        </Text>
      </Memo(Pressable)>
      <View
        style={
          {
            "flexDirection": "row",
            "marginTop": 30,
            "width": "100%",
          }
        }
      >
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "flex": 1,
              "margin": 5,
            }
          }
          title="[missing "en.GENERICS.CANCEL" translation]"
          titleColor="#0071e9"
          titleFontSize={16}
          titleFontWeight="normal"
          type={2}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "flex": 1,
              "margin": 5,
            }
          }
          title="[missing "en.GENERICS.CONTINUE" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </View>
  </CustomModalComponent>
  <PickPalletInfoCard
    canDelete={false}
    dispatch={[MockFunction]}
    inProgress={false}
    isSelected={false}
    onPress={[Function]}
    palletId="43"
    palletLocation="ABAR1-2"
    pickListItems={[]}
    pickStatus="ready to work"
    showCheckbox={false}
  />
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "padding": 5,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 13,
        }
      }
    >
      [missing "en.PICKING.UPDATE_REMAINING_QTY" translation]
    </Text>
  </View>
  <FlatList
    data={
      [
        {
          "assignedAssociate": "",
          "category": 3,
          "createTs": "2022-04-03T12:55:31.9633333Z",
          "createdBy": "Guude",
          "id": 0,
          "itemDesc": "generic description",
          "itemNbr": 1,
          "moveToFront": false,
          "palletId": "43",
          "palletLocationId": 4,
          "palletLocationName": "ABAR1-2",
          "quickPick": false,
          "salesFloorLocationId": 5,
          "salesFloorLocationName": "ABAR1-3",
          "status": "ready to work",
          "upcNbr": "1234567890123",
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
  <View
    style={
      {
        "borderTopColor": "#bdbdbd",
        "borderTopWidth": 2,
        "flexDirection": "row",
        "marginTop": "auto",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={true}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        {
          "flex": 1,
          "margin": 5,
        }
      }
      testID="continue"
      title="[missing "en.GENERICS.CONTINUE" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</RCTSafeAreaView>
`;

exports[`Sales floor workflow tests shows the expiration date modal date picker 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    modalType="Form"
    onClose={[Function]}
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#5a9ae0",
          "borderRadius": 2,
          "borderWidth": 1,
          "flexDirection": "column",
          "height": 30,
          "justifyContent": "center",
          "marginTop": 8,
          "width": "100%",
        }
      }
    >
      <Text>
        [missing "en.PICKING.REMOVE_PERISHABLE" translation]
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "space-between",
          "margin": 10,
        }
      }
    >
      <Text>
        [missing "en.PICKING.REMOVE_PERISHABLE_NEW_EXPIRY" translation]
      </Text>
      <Memo(Pressable)
        onPress={[Function]}
        style={
          {
            "borderBottomWidth": 1,
            "marginTop": 10,
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 18,
            }
          }
        >
          16/02/2021
        </Text>
      </Memo(Pressable)>
      <View
        style={
          {
            "flexDirection": "row",
            "marginTop": 30,
            "width": "100%",
          }
        }
      >
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "flex": 1,
              "margin": 5,
            }
          }
          title="[missing "en.GENERICS.CANCEL" translation]"
          titleColor="#0071e9"
          titleFontSize={16}
          titleFontWeight="normal"
          type={2}
          width={-1}
        />
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "flex": 1,
              "margin": 5,
            }
          }
          title="[missing "en.GENERICS.CONTINUE" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </View>
  </CustomModalComponent>
  <Picker
    display="spinner"
    is24Hour={true}
    minimumDate={2021-02-16T22:16:30.000Z}
    mode="date"
    onChange={[Function]}
    value={2021-02-16T22:16:30.000Z}
  />
  <PickPalletInfoCard
    canDelete={false}
    dispatch={[MockFunction]}
    inProgress={false}
    isSelected={false}
    onPress={[Function]}
    palletId="43"
    palletLocation="ABAR1-2"
    pickListItems={[]}
    pickStatus="ready to work"
    showCheckbox={false}
  />
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "padding": 5,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 13,
        }
      }
    >
      [missing "en.PICKING.UPDATE_REMAINING_QTY" translation]
    </Text>
  </View>
  <FlatList
    data={
      [
        {
          "assignedAssociate": "",
          "category": 3,
          "createTs": "2022-04-03T12:55:31.9633333Z",
          "createdBy": "Guude",
          "id": 0,
          "itemDesc": "generic description",
          "itemNbr": 1,
          "moveToFront": false,
          "palletId": "43",
          "palletLocationId": 4,
          "palletLocationName": "ABAR1-2",
          "quickPick": false,
          "salesFloorLocationId": 5,
          "salesFloorLocationName": "ABAR1-3",
          "status": "ready to work",
          "upcNbr": "1234567890123",
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
  <View
    style={
      {
        "borderTopColor": "#bdbdbd",
        "borderTopWidth": 2,
        "flexDirection": "row",
        "marginTop": "auto",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={true}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        {
          "flex": 1,
          "margin": 5,
        }
      }
      testID="continue"
      title="[missing "en.GENERICS.CONTINUE" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</RCTSafeAreaView>
`;

exports[`Sales floor workflow tests shows the loading indicator over in custom delete bad pallet modal 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    minHeight={100}
    modalType="Form"
    onClose={[Function]}
  >
    <ActivityIndicator
      animating={true}
      color="#0071e9"
      hidesWhenStopped={true}
      size="large"
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    />
  </CustomModalComponent>
  <mockConstructor
    color="#e57373"
    name="error"
    size={60}
  />
  <Text
    style={
      {
        "marginVertical": 10,
        "textAlign": "center",
      }
    }
  >
    [missing "en.PALLET.PALLET_DETAILS_ERROR" translation]
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Sales floor workflow tests shows the retry button when get pallet details errors 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <CustomModalComponent
    animationType="none"
    isVisible={false}
    minHeight={100}
    modalType="Form"
    onClose={[Function]}
  >
    <View>
      <Text
        style={
          {
            "fontSize": 18,
            "paddingTop": 10,
            "textAlign": "center",
          }
        }
      >
        [missing "en.PICKING.PALLET_NOT_IN_SYSTEM" translation]
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "marginTop": 30,
            "width": "100%",
          }
        }
      >
        <Button
          backgroundColor="#0071e9"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "flex": 1,
              "margin": 5,
            }
          }
          testID="Cancel-Delete-Button"
          title="[missing "en.GENERICS.CANCEL" translation]"
          titleColor="#0071e9"
          titleFontSize={16}
          titleFontWeight="normal"
          type={2}
          width={-1}
        />
        <Button
          backgroundColor="#D6512D"
          disabled={false}
          height={45}
          onPress={[Function]}
          radius={5}
          style={
            {
              "flex": 1,
              "margin": 5,
            }
          }
          testID="Confirm-Delete-Button"
          title="[missing "en.GENERICS.YES" translation]"
          titleColor="#ffffffff"
          titleFontSize={16}
          titleFontWeight="normal"
          type={1}
          width={-1}
        />
      </View>
    </View>
  </CustomModalComponent>
  <mockConstructor
    color="#e57373"
    name="error"
    size={60}
  />
  <Text
    style={
      {
        "marginVertical": 10,
        "textAlign": "center",
      }
    }
  >
    [missing "en.PALLET.PALLET_DETAILS_ERROR" translation]
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </TouchableOpacity>
</View>
`;
